matrix/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: riot
  name: riot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: riot
  strategy: {}
  template:
    metadata:
      labels:
        app: riot
    spec:
      containers:
      #- image: vectorim/riot-web:v1.7.1
      - image: ghcr.io/gnuu-de/element-web:v1.11.25
        name: riot
        ports:
          - containerPort: 80
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: matrixbot
  name: matrixbot
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: matrixbot
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: matrixbot
      annotations:
        checksum/secrets: gnuu-secrets | sha256sum
    spec:
      containers:
      - image: ghcr.io/gnuu-de/python:2.0.0
        imagePullPolicy: Always
        name: matrixbot
        ports:
          - containerPort: 4785
        command: ["sh","-c"]
        args: ["git clone https://github.com/gnuu-de/matrix-webhook.git && cd matrix-webhook && python3 matrix_webhook.py"]
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
